--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -51,7 +51,7 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'usuarios/js/usuarios.js' %}"></script>
+    <script src="{% static 'usuarios/js/principal.js' %}"></script>
 </body>
 
 {% endblock %}
