--- a/templates/static/usuarios/css/cadastro2.css
+++ b/templates/static/usuarios/css/cadastro2.css
@@ -31,7 +31,7 @@ body{
     box-shadow: 0 5px 15px rgba(0,0,0,0.35);
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 100%;
     min-width: 90%;
     min-height: 480px;
 }
