--- a/usuarios/templates/principal.html
+++ b/usuarios/templates/principal.html
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-    <!--Modal
+    <!--Modal-->
     <div id="produto-modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="fecharModal()">&times;</span>
@@ -139,7 +139,7 @@
             <button type="button" data-produto="produto-id-modal" data-action="add" class="btn botao-add-carrinho add-btn update-cart">Add ao Carrinho</button>
         </div>
     </div>
-    -->
+
 </body>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
