--- a/templates/static/usuarios/css/telaprincipal.css
+++ b/templates/static/usuarios/css/telaprincipal.css
@@ -303,11 +303,15 @@ body{
     padding: 1%;
     width: 100%;
 }
-.detail-sub{
+.detail-sub {
     font-size: 12px;
     color: var(--dark-color);
     letter-spacing: 0.5;
     margin: 1% 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 100%; /* Defina o tamanho máximo que você deseja para o texto */
 }
 .price{
     color: var(--dark-color);
