função de logout

--- a/templates/gerente.html
+++ b/templates/gerente.html
@@ -78,6 +78,13 @@
           </a>
           <span class="tooltip">Configurações</span>
         </li>
+        <li>
+          <a href="{% url 'logout' %}">
+            <i class='bx bx-log-out' ></i>
+            <span class="links_name">Sair</span>
+          </a>
+          <span class="tooltip">Sair</span>
+        </li>
         </ul>
       </div>
       
