--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -42,15 +42,28 @@
                 <div class="toggle-panel toggle-left">
                     <h1>Bem Vindo!</h1>
                     <p>Para se manter conectado conosco, faça login com suas informações pessoais</p>
-                    <button class="hidden" id="login">Login</button>
+                    <button  id="login">Login</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Olá, Amigo!</h1>
                     <p>Insira seus dados pessoais e comece a fazer pedidos conosco</p>
-                    <button class="hidden" id="register">Cadastrar</button>
+                    <button  id="register">Cadastrar</button>
             </div>
         </div>
     </div>
+    <script>
+        const container = document.getElementById('container');
+        const registerBtn = document.getElementById('register');
+        const loginBtn = document.getElementById('login');
+
+        registerBtn.addEventListener('click', () => {
+            container.classList.add("active");
+        });
+
+        loginBtn.addEventListener('click', () => {
+            container.classList.remove("active");
+        });
+    </script>
     <script src="{% static 'usuarios/js/principal.js' %}"></script>
 </body>
 
