--- a/gerenciamento/templates/principalGerente.html
+++ b/gerenciamento/templates/principalGerente.html
@@ -1,7 +1,6 @@
 {% extends "gerente.html" %}
 {% load static %}
 
-
 {% block 'head' %}
     <link rel="stylesheet" href="{% static 'usuarios/css/telaprincipal.css' %}">
     <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
@@ -17,8 +16,10 @@
             <ion-icon class="menu-toggle" name="menu-outline"></ion-icon>
 
             <div class="search">
-                <input type="text" placeholder="Pesquisar" name="Pesquisar">
-                <button class="search-btn">Pesquisar</button>
+                <form id="pesquisa-produto" method="GET" action="{% url 'pesquisar_produto' %}">
+                    <input type="text" placeholder="Pesquisar" name="Pesquisar" value="{{termo_pesquisa}}">
+                    <button class="search-btn">Pesquisar</button>
+                </form>
             </div>
 
             <div class="add-produto" name="addProduto">
@@ -31,20 +32,15 @@
         <div class="main-highlight">
             <div class="main-header">
                 <h2 class="main-title">Recomendações</h2>
-                <div class="main-arrow">
-                    <ion-icon class="back" name="chevron-back-circle-outline"></ion-icon>
-                    <ion-icon class="next" name="chevron-forward-circle-outline"></ion-icon>
-
-                </div>
             </div>
             <!--highlight menu-->
             <div class="highlight-wrapper">
                 {% for produto in produtos|slice:":4" %}
-                    <div class="highlight-card" onclick="expandirProduto('{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
+                    <div class="highlight-card">
                         <img class="highlight-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
                         <div class="highlight-desc">
                             <h4>{{ produto.nome_produto }}</h4>
-                            <p>R$ {{ produto.preco }}</p>
+                            <p>R$ {{ produto.preco|floatformat:2 }}</p>
                         </div>
                     </div> 
                 {% endfor %}
@@ -56,42 +52,38 @@
             <div class="main-filter">
                 <div>
                     <h2 class="main-title">Menu<br>Categoria</h2>
-                    <div class="main-arrow">
-                        <ion-icon class="back-menus" name="chevron-back-circle-outline"></ion-icon>
-                        <ion-icon class="next-menus" name="chevron-forward-circle-outline"></ion-icon>
-                    </div>
                 </div>
                 <div class="filter-wrapper">
-                    <button class="filter-card category-filter" data-category="cardapio">
+                    <div class="filter-card category-filter" data-category="cardapio">
                         <div class="filter-icon">
                             <ion-icon name="restaurant-outline"></ion-icon>
                         </div>
                         <p>Cardápio</p>
-                    </button>
-                    <button class="filter-card category-filter" data-category="salgado">
+                    </div>
+                    <div class="filter-card category-filter" data-category="salgado">
                         <div class="filter-icon">
                             <ion-icon name="fast-food-outline"></ion-icon>
                         </div>
                         <p>Salgados</p>
-                    </button>
-                    <button class="filter-card category-filter" data-category="doce">
+                    </div>
+                    <div class="filter-card category-filter" data-category="doce">
                         <div class="filter-icon">
                             <ion-icon name="ice-cream-outline"></ion-icon>
                         </div>
                         <p>Doces</p>
-                    </button>
-                    <button class="filter-card category-filter" data-category="bolo">
+                    </div>
+                    <div class="filter-card category-filter" data-category="bolo">
                         <div class="filter-icon">
                             <i class='bx bx-cake'></i>
                         </div>
                         <p>Bolos</p>
-                    </button>
-                    <button class="filter-card category-filter" data-category="bebida">
+                    </div>
+                    <div class="filter-card category-filter" data-category="bebida">
                         <div class="filter-icon">
                             <ion-icon name="cafe-outline"></ion-icon>
                         </div>
                         <p>Bebidas</p>
-                    </button>
+                    </div>
                 </div>
             </div>
             <hr class="divider">
@@ -100,22 +92,27 @@
                 <h2 class="main-title">Faça seu pedido</h2>
                 <div class="detail-wrapper">
                     {% for produto in produtos %}
-                    <div class="detail-card produto-card {{ produto.categoria }}" onclick="expandirProduto('{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
-                        <img class="detail-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
+                    <div class="detail-card produto-card {{ produto.categoria }}" >
+                        <span class="detail-icon" onclick="expandirProduto('{{produto.id_produto}}', '{{produto.imageURL}}', '{{produto.nome_produto}}', '{{produto.descricao}}', '{{produto.preco}}')">
+                            <img class="detail-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
+                        </span>
                         <div class="detail-desc">
                             <div class="detail-name">
                                 <h4>{{produto.nome_produto}}</h4>
                                 <p class="detail-sub">{{produto.descricao}}</p>
-                                <p class="price">R$ {{produto.preco}}</p>
+                                <p class="price">R$ {{produto.preco|floatformat:2}}</p>
                             </div>
-                            <ion-icon class="detail-favorites" name="bookmark-outline"></ion-icon>
+                        </div>
+                        <div class="row">
+                            <button type="button" data-produto="{{produto.id_produto}}" data-action="add" class="btn botao-add-carrinho add-btn update-cart">Add ao Carrinho</button>
                         </div>
                     </div> 
                     {% endfor %}
                 </div>
-            </div>          
+            </div>
         </div>
     </div>
+    <!--Modal
     <div id="produto-modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="fecharModal()">&times;</span>
@@ -123,6 +120,17 @@
             <div class="conteudo-text">
                 <h2 id="produto-nome-modal"></h2>
                 <p id="produto-descricao-modal"></p>
+                <row>
+                    <div class="col-md">
+                        <p>{{ ingrediente.nome_ingrediente }}</p>
+                    </div>
+                    <div class="col-md">
+                        <p>{{ ingrediente.quantidade }}</p>
+                    </div>
+                    <div class="col-md">
+                        <p>{{ ingrediente.unidade_medida }}</p>
+                    </div>
+                </row>
                 <div class="row">
                     <div class="col-md">
                         <p id="produto-preco-modal"></p>
@@ -133,16 +141,36 @@
                     </div> 
                 </div>
             </div>
-            
-            <button class="botao-add-carrinho" onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
+            <button type="button" data-produto="produto-id-modal" data-action="add" class="btn botao-add-carrinho add-btn update-cart">Add ao Carrinho</button>
         </div>
     </div>
+    -->
+
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+    const categoryFilters = document.querySelectorAll('.category-filter');
+
+    categoryFilters.forEach(filter => {
+        filter.addEventListener('click', () => {
+            const selectedCategory = filter.getAttribute('data-category');
+
+            const produtos = document.querySelectorAll('.produto-card');
+            produtos.forEach(produto => {
+                if (selectedCategory === 'cardapio' || produto.classList.contains(selectedCategory)) {
+                    produto.style.display = 'block';
+                } else {
+                    produto.style.display = 'none';
+                }
+            });
+        });
+    });
+});
+</script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <!-- javascript-->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="{% static 'usuarios/js/principal.js' %}"></script>
 <script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
-    
 {% endblock %}
