--- a/templates/cliente.html
+++ b/templates/cliente.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     
-    <div class="sidebar">
+      <div class="sidebar">
         <div class="logo-details">
             <div class="logo_name">PÃO QUENTE</div>
             <i class='bx bx-menu' id="btn" ></i>
@@ -59,9 +59,9 @@
             <span class="tooltip">Configurações</span>
           </li>
           <li>
-            <a href="{% url 'logout' %}">
-              <i class='bx bx-log-out' ></i>
-              <span class="links_name">Sair</span>
+            <a href="{% url 'logout' %}" id="logout-link">
+                <i class='bx bx-log-out' ></i>
+                <span class="links_name">Sair</span>
             </a>
             <span class="tooltip">Sair</span>
           </li>
