--- a/templates/gerente.html
+++ b/templates/gerente.html
@@ -79,9 +79,9 @@
           <span class="tooltip">Configurações</span>
         </li>
         <li>
-          <a href="{% url 'logout' %}">
-            <i class='bx bx-log-out' ></i>
-            <span class="links_name">Sair</span>
+          <a href="{% url 'logout' %}" id="logout-link">
+              <i class='bx bx-log-out' ></i>
+              <span class="links_name">Sair</span>
           </a>
           <span class="tooltip">Sair</span>
         </li>
