--- a/templates/static/gerenciamento/css/gerenciamento.css
+++ b/templates/static/gerenciamento/css/gerenciamento.css
@@ -149,6 +149,7 @@ font-weight: 600;
     border-radius: 20px;
     border: var(--differential-color) solid 1px;
     padding-left: 10px;
+    margin-bottom: 10px;
 }
 .container-perfil{
     display: flex;
@@ -167,6 +168,7 @@ font-weight: 600;
     font-size: 35px;
     font-weight: 700;
     margin-bottom: 20px;
+    padding: 20px 0px 10px 25px;
 }
 .btn-att-perfil{
     background-color: var(--dark-color);
