--- a/usuarios/templates/principal.html
+++ b/usuarios/templates/principal.html
@@ -27,14 +27,6 @@
                 <p id="cart-total">{{carrinho_itens|floatformat:0}}</p>
             </div>
             
-
-            <!-- Container do Carrinho -->
-            <div id="carrinho-container" class="carrinho-popup" style="display: none;">
-                <h2>Seu Carrinho</h2>
-                <ul id="produtos-carrinho">
-                    <!-- Lista de produtos no carrinho será atualizada dinamicamente com JavaScript -->
-                </ul>
-            </div>
         </div>
         <!--Main highlight-->
         <div class="main-highlight">
@@ -44,13 +36,13 @@
             <!--highlight menu-->
             <div class="highlight-wrapper">
                 {% for produto in produtos|slice:":4" %}
-                    <div class="highlight-card">
+                    <a class="highlight-card" href="{% url 'produto' produto.id_produto %}">
                         <img class="highlight-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
                         <div class="highlight-desc">
                             <h4>{{ produto.nome_produto }}</h4>
                             <p>R$ {{ produto.preco|floatformat:2 }}</p>
                         </div>
-                    </div> 
+                    </a> 
                 {% endfor %}
             </div>
         </div>
