--- a/usuarios/templates/produto.html
+++ b/usuarios/templates/produto.html
@@ -5,55 +5,88 @@
     <link rel="stylesheet" href="{% static 'usuarios/css/telaprincipal.css' %}">
     <link rel="stylesheet" href="{% static 'usuarios/css/detalheProduto.css' %}">
     <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 {% endblock %}
 
 {% block 'dashboard' %}
 <body>
-    
-    <div class = "main-wrapper">
-        <div class = "container">
-            <div class = "product-div">
-                <div class = "product-div-left">
-                    <div class = "img-container">
-                        <img src = "{{produto.imageURL}}" alt = "{{produto.nome_produto}}">
+    <!--main-->
+    <div class="main">
+        <!--Main navbar-->
+        <div class="main-navbar">
+            <ion-icon class="menu-toggle" name="menu-outline"></ion-icon>
+
+            <div class="search">
+                <form id="pesquisa-produto" method="GET" action="{% url 'pesquisar_produto' %}">
+                    <input type="text" placeholder="Pesquisar" name="Pesquisar" value="{{termo_pesquisa}}">
+                    <button class="search-btn">Pesquisar</button>
+                </form>
+            </div>
+
+            <div class="profile">
+                <a class="cart" href="{% url 'carrinho' %}"><ion-icon name="cart-outline"></ion-icon></a>
+                <p id="cart-total">{{carrinho_itens|floatformat:0}}</p>
+            </div>
+            
+        </div>
+        
+        <div class = "main-wrapper">
+            <div class = "container">
+                <div class = "product-div">
+                    <div class = "product-div-left">
+                        <div class = "img-container">
+                            <img src = "{{produto.imageURL}}" alt = "{{produto.nome_produto}}">
+                        </div>
+                        
                     </div>
-                    
-                </div>
-                <div class = "product-div-right">
-                    <span class = "product-name">{{produto.nome_produto}}</span>
-                    <span class = "product-price">R$ {{produto.preco|floatformat:2}}</span>
-                    <p class = "product-description">{{produto.descricao}}</p>
-                    <div class = "btn-groups">
-                        <button type = "button" class = "add-cart-btn"><i class = "fas fa-shopping-cart"></i>add no carrinho</button>
+                    <div class = "product-div-right">
+                        <span class = "product-name">{{produto.nome_produto}}</span>
+                        <hr class="divider">
+                        <span class = "product-price">R$ {{produto.preco|floatformat:2}}</span>
+                        <p class = "product-description">{{produto.descricao}}</p>
+                        <p class = "product-ingredientes">Ingredientes:</p>
+                                {% for ingrediente in ingredientes_produto %}
+                                    <li>{{ ingrediente.nome_ingrediente }}</li>
+                                {% endfor %}
+                        <div class = "btn-groups">
+                            <button type="button" data-produto="{{produto.id_produto}}" data-action="add" class="btn botao-add-carrinho add-btn update-cart">Add ao Carrinho</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
+
+        <div id="comentarios">
+            <form id="avaliacao-produto" method="POST" action="{% url 'produto' produto.id_produto %}"> {% csrf_token %}
+                <input type="text" name="comentario" value="{{comentario}}">
+                <input type="number" name="nota" min="1" max="5" step="0.1" value="{{nota}}">
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+
+        <br>
+
+        {% if avaliacoes %}
+        <h2>Comentários:</h2>
+        <ul>
+            {% for avaliacao in avaliacoes %}
+                <li>
+                    <p><strong>Usuário:</strong> {{ avaliacao.usuario }}</p>
+                    <p><strong>Comentário:</strong> {{ avaliacao.comentario }}</p>
+                    <p><strong>Nota:</strong> {{ avaliacao.nota }}</p>
+                    <p><strong>Data:</strong> {{ avaliacao.data }}</p>
+                </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <p>Não há comentários para este produto.</p>
+        {% endif %}
     </div>
-
-    <form id="avaliacao-produto" method="POST" action="{% url 'produto' produto.id_produto %}"> {% csrf_token %}
-        <input type="text" name="comentario" value="{{comentario}}">
-        <input type="number" name="nota" min="1" max="5" step="0.1" value="{{nota}}">
-        <button type="submit">Enviar</button>
-    </form>
-
-    <br>
-
-    {% if avaliacoes %}
-    <h2>Comentários:</h2>
-    <ul>
-        {% for avaliacao in avaliacoes %}
-            <li>
-                <p><strong>Usuário:</strong> {{ avaliacao.usuario }}</p>
-                <p><strong>Comentário:</strong> {{ avaliacao.comentario }}</p>
-                <p><strong>Nota:</strong> {{ avaliacao.nota }}</p>
-                <p><strong>Data:</strong> {{ avaliacao.data }}</p>
-            </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-        <p>Não há comentários para este produto.</p>
-    {% endif %}
 </body>
+
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script src="{% static 'usuarios/js/principal.js' %}"></script>
 
 {% endblock %}
