ajustes na parte de gerente

--- a/gerenciamento/templates/adicionarProduto.html
+++ b/gerenciamento/templates/adicionarProduto.html
@@ -25,7 +25,7 @@
         </div>
     
 
-        <div id="add-produto" class="adicionar-produto" name="add-produto", style="display:none">
+        <div id="add-produto" class="adicionar-produto" name="add-produto">
             <form action="% url 'addProduto' %" method="POST" enctype="multipart/form-data">{% csrf_token %}
                 <div class="produtoform">
                     <h2 class="main-title">Adicionar produto</h2>
