--- a/gerenciamento/templates/pesquisaProdutoGerente.html
+++ b/gerenciamento/templates/pesquisaProdutoGerente.html
@@ -16,24 +16,10 @@
             <ion-icon class="menu-toggle" name="menu-outline"></ion-icon>
 
             <div class="search">
-                <form id="pesquisa-produto" method="GET" action="{% url 'pesquisar_produto' %}">
+                <form id="pesquisa-produto" method="GET" action="{% url 'pesquisaProdutoGerente' %}">
                     <input type="text" placeholder="Pesquisar" name="Pesquisar" value="{{termo_pesquisa}}">
                     <button class="search-btn">Pesquisar</button>
                 </form>
-            </div>
-
-            <div class="profile">
-                <a class="cart" href="{% url 'carrinho' %}"><ion-icon name="cart-outline"></ion-icon></a>
-                <p id="cart-total">{{carrinho_itens|floatformat:0}}</p>
-            </div>
-            
-
-            <!-- Container do Carrinho -->
-            <div id="carrinho-container" class="carrinho-popup" style="display: none;">
-                <h2>Seu Carrinho</h2>
-                <ul id="produtos-carrinho">
-                    <!-- Lista de produtos no carrinho será atualizada dinamicamente com JavaScript -->
-                </ul>
             </div>
         </div>
         <!--Menu-->
@@ -46,9 +32,9 @@
                 <div class="detail-wrapper">
                     {% for produto in resultados %}
                     <div class="detail-card produto-card {{ produto.categoria }}" >
-                        <span class="detail-icon" onclick="expandirProduto('{{produto.id_produto}}', '{{produto.imageURL}}', '{{produto.nome_produto}}', '{{produto.descricao}}', '{{produto.preco}}')">
+                        <a class="detail-icon" href="{% url 'produtoGerente' produto.id_produto %}">
                             <img class="detail-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
-                        </span>
+                        </a>
                         <div class="detail-desc">
                             <div class="detail-name">
                                 <h4>{{produto.nome_produto}}</h4>
@@ -57,7 +43,9 @@
                             </div>
                         </div>
                         <div class="row">
-                            <button type="button" data-produto="{{produto.id_produto}}" data-action="add" class="btn botao-add-carrinho add-btn update-cart">Add ao Carrinho</button>
+                            <a class="detail-icon" href="{% url 'produtoGerente' produto.id_produto %}">
+                                <button type="button" data-produto="{{produto.id_produto}}" class="btn botao-add-carrinho">Ver Detalhes</button>
+                            </a>
                         </div>
                     </div> 
                     {% endfor %}
