--- a/gerenciamento/templates/produtoGerente.html
+++ b/gerenciamento/templates/produtoGerente.html
@@ -1,4 +1,4 @@
-{% extends "cliente.html" %}
+{% extends "gerente.html" %}
 {% load static %}
 
 {% block 'head' %}
@@ -21,11 +21,6 @@
                     <input type="text" placeholder="Pesquisar" name="Pesquisar" value="{{termo_pesquisa}}">
                     <button class="search-btn">Pesquisar</button>
                 </form>
-            </div>
-
-            <div class="profile">
-                <a class="cart" href="{% url 'carrinho' %}"><ion-icon name="cart-outline"></ion-icon></a>
-                <p id="cart-total">{{carrinho_itens|floatformat:0}}</p>
             </div>
             
         </div>
@@ -54,21 +49,13 @@
                                     <li>{{ ingrediente.nome_ingrediente }}</li>
                                 {% endfor %}
                         <div class = "btn-groups">
-                            <button type="button" data-produto="{{produto.id_produto}}" data-action="add" class="btn botao-add-carrinho add-btn update-cart">Add ao Carrinho</button>
+                            <button type="button" data-produto="{{produto.id_produto}}" class="btn botao-add-carrinho">Atualizar Produto</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <br>
-
-        <div id="comentarios">
-            <form id="avaliacao-produto" method="POST" action="{% url 'produto' produto.id_produto %}"> {% csrf_token %}
-                <input type="text" name="comentario" value="{{comentario}}">
-                <input type="number" name="nota" min="1" max="5" step="0.1" value="{{nota}}">
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
 
         <br>
 
