--- a/gerenciamento/templates/funcionarios.html
+++ b/gerenciamento/templates/funcionarios.html
@@ -59,42 +59,43 @@
         <div class="funcionarioform">
             <h2 class="main-title">Atualizar funcionário</h2>
             <p class="label-text">Funcionário: </p>
-                <select id="funcionario-select" onchange="dados_funcionario(this)" class="form-control">
-                    <option value="" selected disabled hidden>Selecione um funcionário</option>
-                    {% for funcionario in funcionarios %}
-                        <option value="{{ funcionario.id_funcionario }}">{{ funcionario.nome_funcionario }}</option>
-                    {% endfor %}
-                </select>
-                <br>
+            <select id="funcionario-select" onchange="dados_funcionario(this)" class="form-control">
+                <option value="" selected disabled hidden>Selecione um funcionário</option>
+                {% for funcionario in funcionarios %}
+                    <option value="{{ funcionario.id_funcionario }}">{{ funcionario.nome_funcionario }}</option>
+                {% endfor %}
+            </select>
+            <br>
+            <form id="form-att-funcionario" action="{% url 'updateFuncionario' 0 %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" id="id_funcionario" name="id_funcionario">
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Nome do funcionário</p>
-                        <input class="caixa-entrada" type="text" id="nome_funcionario" name="nome" placeholder="Nome do funcionário" value="{{nome_funcionario}}">
+                        <input class="caixa-entrada" type="text" id="nome_funcionario" name="nome" placeholder="Nome do funcionário">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Telefone</p>
-                        <input class="caixa-entrada" type="text" id="telefone_funcionario" name="telefone" placeholder="Telefone do funcionário" value="{{telefone_funcionario}}">
+                        <input class="caixa-entrada" type="text" id="telefone_funcionario" name="telefone" placeholder="Telefone do funcionário">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Cargo</p>
-                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário" value="{{cargo}}">
+                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Salário (apenas números)</p>
-                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário" value="{{salario}}">
+                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário">
                     </div>
                 </div>
                 <br>
                 <div class="row">
-                    <input onclick="atualizar_funcionario()" type="submit" value="Atualizar" class="btn-add-principal">
-                    <input onclick="excluir_funcionario()" type="submit" value="Excluir" class="btn-remover-principal">
+                    <button type="submit" class="btn-add-principal">Atualizar</button>
+                    <button type="button" onclick="excluir_funcionario()" class="btn-remover-principal">Excluir</button>
                 </div>
-                
-                
-            </div>
+            </form>
         </div>
     </div>
         
