--- a/gerenciamento/templates/produtoGerente.html
+++ b/gerenciamento/templates/produtoGerente.html
@@ -50,6 +50,14 @@
                                 {% endfor %}
                         <div class = "btn-groups">
                             <button type="button" data-produto="{{produto.id_produto}}" class="btn botao-add-carrinho">Atualizar Produto</button>
+                            <!-- Botão para excluir produto -->
+                            <button onclick="confirmarExclusao('{{ produto.id_produto }}')">Excluir Produto</button> 
+                        </div>
+                        <!-- Modal de confirmação -->
+                        <div id="modal-confirmacao" style="display: none;">
+                            <p>Deseja realmente excluir o produto?</p>
+                            <button onclick="excluirProduto('{{ produto.id_produto }}')">Sim</button>
+                            <button onclick="fecharModal()">Cancelar</button>
                         </div>
                     </div>
                 </div>
